[tool.poetry]
name = "pytest-kube"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.plugins.pytest11]
pytest-kind = "pytest_kube.plugin"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.2"
pytest-kind = "20.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
